# lockers-cl

./: .gitignore  README  README.md  app2.py  app2.spec  app3.py  app3.spec  db.sqlite3  gtk_locker.py  locker.spec  lockers.py  lockers.spec  lockersgui.desktop  pyproject.toml  requirements-build.txt  requirements-desktop.txt  requirements-lock.txt  requirements.txt  setup.py
.github/workflows/: release.yml
android/: build.gradle  gradle.properties  gradlew  gradlew.bat  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/ftrina/lockers/: MainActivity.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/mipmap-anydpi-v33/: ic_launcher_foreground.xml
android/app/src/main/res/values/: colors.xml  strings.xml
cl/: asgi.py  settings.py  urls.py
dist_/lockers/: libblkid.so.1  libgnutls.so.30  libxml2.so.2
dist_/lockers/share/glib-2.0/schemas/: 15_oem-ouagadougou-meta.gschema.override  40_manage-estar-settings.gschema.override  41_dell-super-key.gschema.override
dist_/lockers/share/mime/: mime.cache
dist_/lockers/templates/: pick.html
dist_/lockers/web/migrations/: 0002_alter_cell_cell_alter_cell_code.py
docs/: BUILD_AND_CONTRIBUTE.md
lockers.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: build_android.sh  build_macos.sh  build_ubuntu.sh  build_windows.ps1  ci_smoke.py
templates/: dashboard.html  drop.html  home_base.html  key.html
tests/: test_desktop.py  test_locker.py  test_smoke.py
web/: forms.py  locker.py  models.py  tests.py  urls.py  views.py
web/migrations/: 0001_initial.py
